<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App & Screens -->
    <string name="app_name">LocalSQLitengoding 8</string>
    <string name="notes">Notes</string>

    <!-- Actions -->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>

    <!-- Hints & Placeholders -->
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>

    <!-- Empty & Error States -->
    <string name="no_data">No data</string>

    <!-- Confirmation Messages -->
    <string name="cancel_confirm">Do you want to cancel %1$s on the form?</string>
    <string name="confirm_delete">Are you sure you want to delete this note?</string>
    <string name="confirm_update">Are you sure you want to update this note?</string>
</resources>
