<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Form Add & Submit -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_form"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#03A9F4"
        android:titleTextColor="#FFFFFF"
        app:title="@string/add"
        app:menu="@menu/menu_form"/>

    <!-- Form Inputs -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="1dp"
                android:background="#EEEEEE"
                android:layout_marginBottom="12dp">

                <!-- Form Add & Submit -->
                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_hint"
                    android:padding="12dp"
                    android:background="@android:color/transparent"
                    android:textColor="#212121"/>
            </androidx.cardview.widget.CardView>

            <!-- Description Field -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="1dp"
                android:background="#EEEEEE"
                android:layout_marginBottom="24dp">

                <!-- Form Add & Submit -->
                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_hint"
                    android:padding="12dp"
                    android:background="@android:color/transparent"
                    android:textColor="#212121"/>
            </androidx.cardview.widget.CardView>

            <!-- Submit/Update Button -->
            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:backgroundTint="#03A9F4"
                android:paddingVertical="14dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
